html header menu

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,22 @@
   <body class="page" id="top">
     <div class="page__wrapper" >
       <header class="header">
-
+        <div class="container">
+          <ul class="header__menu">
+            <li class="header__item"><a href="#">Контрагентам</a></li>
+            <li class="header__item"><a href="#">Дизайнерам</a></li>
+            <li class="header__item"><a href="#">Вакансии</a></li>
+          </ul>
+          <a href="#" class="header__logo">
+            <img src="assets/img/logo.svg" alt="OJJO">
+          </a>
+          <ul class="header__menu">
+            <li class="header__item"><a href="#"><i class="icon icon--search"></i> Поиск</a></li>
+            <li class="header__item"><a href="#">Вход</a>/<a href="#">Регистрация</a></li>
+            <li class="header__item"><a href="#">account</a></li>
+            <li class="header__item"><a href="#">like</a></li>
+          </ul>
+        </div>
       </header>
       <!-- END header -->
 
