--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,8 @@
 
       <main class="page__content">
          hello world + Fix + Add fix
+         <h1>Hello World</h1>
+         <button>Отправить</button>
       </main>
       <!-- END page__content -->
 
