--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 <body class="page" id="top">
    <div class="page__wrapper">
       <header class="header">
-         <div class="container">
+         <div class="container header__wrapper">
             <ul class="header__menu">
                <li class="header__item"><a href="#">Контрагентам</a></li>
                <li class="header__item"><a href="#">Дизайнерам</a></li>
@@ -27,17 +27,14 @@
             <ul class="header__menu">
                <li class="header__item"><a href="#"><i class="icon icon--search"></i> Поиск</a></li>
                <li class="header__item"><a href="#">Вход</a>/<a href="#">Регистрация</a></li>
-               <li class="header__item"><a href="#">account</a></li>
-               <li class="header__item"><a href="#">like</a></li>
+               <li class="header__item"><a href="#"><i class="icon icon--account"></i></a></li>
+               <li class="header__item"><a href="#"><i class="icon icon--wishlist"></i></a></li>
             </ul>
          </div>
       </header>
       <!-- END header -->
 
       <main class="page__content">
-         hello world + Fix + Add fix
-         <h1>Hello World</h1>
-         <button>Отправить</button>
       </main>
       <!-- END page__content -->
 
